tests/snapshots/italics_01.snap
---
source: src/parser.rs
expression: output
---
Italics
  Slash: "/"
  TextChunk
    Word: "an"
    WhiteSpace: " "
    Word: "italics"
    WhiteSpace: " "
    Word: "text"
    WhiteSpace: " "
    Word: "chunk"
  Slash: "/"
