tests/snapshots/italics_02.snap
---
source: src/parser.rs
expression: output
---
Italics
  Error: "/" (unclosed delimiter)
  TextChunk
    Word: "an"
    WhiteSpace: " "
    Word: "italics"
    WhiteSpace: " "
    Word: "text"
    WhiteSpace: " "
    Word: "chunk"
    WhiteSpace: " "
    Word: "blah"
    WhiteSpace: " "
    Word: "blah"
    WhiteSpace: " "
    Word: "blah"
