tests/snapshots/italics_03.snap
---
source: src/parser.rs
expression: output
---
Italics
  Slash: "/"
  Error: " " (unexpected WhiteSpace)
  TextChunk
    Word: "an"
    WhiteSpace: " "
    Word: "italics"
    WhiteSpace: " "
    Word: "text"
    WhiteSpace: " "
    Word: "chunk"
  Slash: "/"
