tests/snapshots/italics_06.snap
---
source: src/parser.rs
expression: output
---
Italics
  Slash: "/"
  TextChunk
    Word: "an"
    WhiteSpace: " "
    Word: "italics"
    WhiteSpace: " "
    Error: "\n" (unexpected LineEnding)
    WhiteSpace: " "
    Word: "text"
    WhiteSpace: " "
    Word: "chunk"
  Slash: "/"
