tests/snapshots/italics_10.snap
---
source: src/parser.rs
expression: output
---
Italics
  Slash: "/"
  Error: "/" (unexpected /)
  TextChunk
    Word: "this"
  Error: "/" (unexpected /)
  Slash: "/"
