tests/snapshots/italics_11.snap
---
source: src/parser.rs
expression: output
---
Italics
  Slash: "/"
  Error: "/" (unexpected /)
  TextChunk
    Word: "this"
    WhiteSpace: " "
    Word: "is"
    WhiteSpace: " "
  Bold
    Asterisk: "*"
    TextChunk
      Word: "bold"
    Asterisk: "*"
  TextChunk
    WhiteSpace: " "
  Error: "/" (unexpected /)
  Slash: "/"
